# TibetanUrineAI

./: .gitignore  README.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  safety.py
apps/api/app/data/: knowledge_seed.json
apps/api/app/db/: __init__.py  session.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: cases.py  health.py  observations.py  uploads.py
apps/api/app/services/: __init__.py  agent.py  feature_extraction.py  gemma_client.py  gemma_features.py  gemma_quality.py  history.py  image_quality.py  reporting.py  symptom_normalizer.py
apps/api/tests/: conftest.py  test_cases.py  test_feature_extraction.py  test_gemma_features.py  test_health.py  test_image_quality.py  test_symptom_normalizer.py  test_uploads.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: Shell.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: CapturePage.tsx  CaseDetailPage.tsx  CasesPage.tsx  Dashboard.tsx  PlaceholderPage.tsx
apps/web/src/types/: domain.ts
docs/: architecture.md
scripts/: dev_api.sh  dev_web.sh
